--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 		<br>
 
 		<!-- Sidebar YouTube -->
-		<iframe style="width:95%" src="https://www.youtube.com/embed/5yx6BWlEVcY" title="Chillhop Lofi" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe style="width:95%" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="Chillhop Lofi" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 		<!-- Sidebar Search bar -->
 		<div>
@@ -193,10 +193,10 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 				<div class="w3-row-padding">
 				<h5 style="color:grey">&nbsp;&nbsp;<b>Lofi Live</b></h5>
 					<div class="w3-third w3-container">
-						<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/7NOSDKb0HlU" title="Chillhop Music" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/HuFYqnbVbzY" title="Chillhop Music" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="w3-third w3-container">
-						<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="Lofi Girl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/5yx6BWlEVcY" title="Lofi Girl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="w3-third w3-container">
 						<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/N_7cSl2oq3o" title="Lofi Girl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
