--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 						<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/5yx6BWlEVcY" title="Lofi Girl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="w3-third w3-container">
-						<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/N_7cSl2oq3o" title="Lofi Girl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/dxyaNvclgE8" title="Lofi Girl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 			  
@@ -196,13 +196,13 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 				<div class="w3-row-padding">
 					<h5 style="color:grey">&nbsp;&nbsp;<b>TV Live</b></h5>
 					<div class="w3-third w3-container">
-						<iframe style="width:100%" src="https://www.youtube.com/embed/-mvUkiILTqI" title="CNA News" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe style="width:100%" src="https://www.youtube.com/embed/iipR5yUp36o" title="ABC News" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="w3-third w3-container">
-						<iframe style="width:100%" src="https://www.youtube.com/embed/YDfiTGGPYCk" title="Al Jazeera" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe style="width:100%" src="https://www.youtube.com/embed/YDfiTGGPYCk" title="Fox Now" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 					<div class="w3-third w3-container">
-						<iframe style="width:100%" src="https://www.youtube.com/embed/XWq5kBlakcQ" title="DW news" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe style="width:100%" src="https://www.youtube.com/embed/XWq5kBlakcQ" title="CNAnews" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					</div>
 				</div>
 				
