--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 		
 	</script>
 
-	<link rel="icon" href="https://raw.githubusercontent.com/rexxboston/mynew/refs/heads/main/images/home.png">
+	<link rel="icon" href="https://github.com/myzghub/mysite/blob/main/images/home.png?raw=true">
 	<link rel="stylesheet" href="./css/clockstyle.css">
 
 </head>
@@ -214,5 +214,6 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 
 </body>
 </html>
+
 
 
