--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>⛅Online</title>
+<title>Homepage</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -214,6 +214,7 @@ ul{padding:0 0 5px 5px;list-style:none}li{line-height:16px}
 
 </body>
 </html>
+
 
 
 
