--- a/bookmark.html
+++ b/bookmark.html
@@ -112,11 +112,11 @@
 					<td><a href="https://loader.to" target="_blank">Loader</a></td>
 					<td><a href="https://cn.aliyun.com/" target="_blank">AliYun</a></td>
 					<td><a href="https://www.cloudskillsboost.google/journeys" target="_blank">gLearning</a></td>
-					<td><a href="https://portal.azure.com/" target="_blank">Azure</a></td>
 					<td><a href="https://my.vultr.com/" target="_blank">Vultr</a></td>
 					<td><a href="https://ebazhanov.github.io/linkedin-skill-assessments-quizzes/" target="_blank">领英吧</a></td>
 					<td><a href="https://www.ctrip.com" target="_blank">携程</a></td>
-					<td><a href="https://www.qunar.com" target="_blank">去哪儿</a></td>
+					<td><a href="https://store.google.com/" target="_blank">G-Store</a></td>
+					<td><a href="https://www.bestbuy.com/" target="_blank">BestBuy</a></td>
 					<td><a href="https://www.fliggy.com" target="_blank">飞猪旅行</a></td>
 					<td><a href="https://www.ebay.com" target="_blank">Ebay</a></td>
 				</tr>
@@ -140,3 +140,4 @@
 		<br>
 	</body>
 </html>
+
