--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
 								<li><a href="https://www.bilibili.com" target="_blank"><img src="images/bili.png" alt="Img">BiliBili</a></li>
 								<li><a href="https://www.youtube.com" target="_blank"><img src="images/youtube.png" alt="Img">YouTube</a></li>						
 								<li><a href="https://www.udemy.com/" target="_blank"><img src="images/udemy.png" alt="Img">Udemy</a></li>
+								<li><a href="https://www.codecademy.com/" target="_blank"><img src="images/codecademy.png" alt="Img">Codecademy</a></li>
 								<li><a href="https://leetcode.com" target="_blank"><img src="images/leetcode.png" alt="Img">LeetCode</a></li>
-								<li><a href="https://www.nowcoder.com" target="_blank"><img src="images/nkw.png" alt="Img">牛客</a></li>
 								<li><a href="https://www.1point3acres.com/bbs" target="_blank"><img src="images/sfd.png" alt="Img">三分地</a></li>
 								<li><a href="https://github.com" target="_blank"><img src="images/github.png" alt="Img">GitHub</a></li>
 								<li><a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.png" alt="Img">LinkedIn</a></li>
@@ -212,6 +212,7 @@
 			</div> <!-- End !PAGE CONTENT! -->
 	</body>
 </html>
+
 
 
 
