--- a/bookmark.html
+++ b/bookmark.html
@@ -84,7 +84,7 @@
 					<td><a href="https://www.youtube.com/channel/UCbbjBIXs_iuZ0qblpzZnDHw" target="_blank">Lofi Kitty</a></td>
 					<td><a href="https://www.youtube.com/channel/UCZzVkd9OOiKV-SfqU0AM8fQ" target="_blank">純淨蓮界YT</a></td>
 					<td><a href="https://www.youtube.com/channel/UCjadz6bIDZ8BfN7koxf3ZRA" target="_blank">Aaron Tomato</a></td>
-					<td><a href="https://www.youtube.com/channel/UC50OSewisJ7JjtSW86VyYNA" target="_blank">Vibe Barista</a></td>
+					<td><a href="https://www.nowcoder.com/" target="_blank">牛客网</a></td>
 					<td><a href="https://clever.com/in/pittsfieldma" target="_blank">Clever-MA</a></td>
 					<td><a href="https://www.123pan.com" target="_blank">123Pan</a></td>
 					
@@ -140,4 +140,5 @@
 		<br>
 	</body>
 </html>
+
 
