--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
 		<title>Homepage</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
 		<link href="css/style.css" type="text/css" rel="stylesheet">
-		
-		<script src="jquery/jquery-latest.js" type="text/javascript"></script>
-		
+		<!-- <script src="jquery/jquery-latest.js" type="text/javascript"></script> -->
 		<style>
 			body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 		</style>
@@ -26,10 +23,9 @@
 		#t1{width:100%;}#t2,#t3,#t4,#t5,#t6{display:none;width:100%;height:100%;}
 		</style>
 	
-		<script>
-	
+		<!-- <script>
 			src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-			
+		
 			i = 0;
 			$(document).ready(function(){
 			  $("input").keypress(function(){
@@ -57,8 +53,7 @@
 				var sValue = document.getElementById("sValue").value;
 				window.open("https://www.google.com/search?q=" + sValue + "");
 			};
-			
-		</script>
+		</script> -->
 	
 		<link rel="icon" href="images/home.png">
 		<link rel="stylesheet" href="./css/clockstyle.css">
@@ -86,7 +81,7 @@
 				<br>
 		
 				<!-- Sidebar YouTube -->
-				<iframe style="width:95%" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="Chillhop Lofi" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<iframe style="width:95%" src="https://www.youtube.com/embed/jfKfPfyJRdk" title="Lofi Girl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				
 				<!-- Sidebar Search bar -->
 				<div>
@@ -95,7 +90,7 @@
 					<button id="searchBtn" onclick="baidusearch()" >  &nbsp; 百度一下 &nbsp;</button>
 				</div>
 		
-				<script>
+				<!-- <script>
 					var input = document.getElementById("sValue");
 					input.addEventListener("keypress", function(event) {
 					  if (event.key === "Enter") {
@@ -103,7 +98,7 @@
 					    document.getElementById("searchBtn").click();
 					  }
 					});
-				</script>
+				</script> -->
 				<br><br><br>
 			</div>
 		</nav>
@@ -138,7 +133,6 @@
 					<div id="wrap" align="center">
 						<div class="grid">
 							<ul>
-		
 								<li><a href="https://mail.google.com" target="_blank"><img src="images/gmail.png" alt="Img">Gmail</a></li>
 								<li><a href="https://outlook.live.com" target="_blank"><img src="images/outlook.png" alt="Img">Outlook</a></li>
 								<li><a href="https://proton.me/" target="_blank"><img src="images/proton.png" alt="Img">Proton</a></li>
@@ -182,13 +176,13 @@
 						<div class="w3-row-padding">
 						<h5 style="color:grey">&nbsp;&nbsp;<b>Lofi Live</b></h5>
 							<div class="w3-third w3-container">
-								<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/HuFYqnbVbzY" title="Chillhop Music" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/HuFYqnbVbzY" title="Lofi Girl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="w3-third w3-container">
-								<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/5yx6BWlEVcY" title="Lofi Girl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/5yx6BWlEVcY" title="Chillhop Music" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="w3-third w3-container">
-								<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/qb5duRUf6dw" title="Lofi Girl" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe style="width:100%" class="w3-hover-opacity" src="https://www.youtube.com/embed/OZpCAvp7ohM" title="Purrple Cat" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</div>
 					  
@@ -199,7 +193,7 @@
 								<iframe style="width:100%" src="https://www.youtube.com/embed/iipR5yUp36o" title="ABC News" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="w3-third w3-container">
-								<iframe style="width:100%" src="https://www.youtube.com/embed/YDfiTGGPYCk" title="Fox Now" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+								<iframe style="width:100%" src="https://www.youtube.com/embed/4nMfRpesYfw" title="Fox Now" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="w3-third w3-container">
 								<iframe style="width:100%" src="https://www.youtube.com/embed/XWq5kBlakcQ" title="CNAnews" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -210,12 +204,47 @@
 				<br>
 				<br>
 			</div> <!-- End !PAGE CONTENT! -->
+		<script>
+			var input = document.getElementById("sValue");
+			input.addEventListener("keypress", function(event) {
+			  if (event.key === "Enter") {
+				event.preventDefault();
+				document.getElementById("searchBtn").click();
+			  }
+			});
+		// </script>
+		// <script>
+			src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+		
+			i = 0;
+			$(document).ready(function(){
+			  $("input").keypress(function(){
+				$("span").text(i += 1);
+			  });
+			});
+	
+			// Script to open and close sidebar
+			function w3_open() {
+				document.getElementById("mySidebar").style.display = "block";
+				document.getElementById("myOverlay").style.display = "block";
+			};
+	
+			function w3_close() {
+				document.getElementById("mySidebar").style.display = "none";
+				document.getElementById("myOverlay").style.display = "none";
+			};
+			
+			function baidusearch() {
+				var sValue = document.getElementById("sValue").value;
+				window.open("https://www.baidu.com/s?wd=" + sValue + "");
+			};
+	
+			function googlesearch() {
+				var sValue = document.getElementById("sValue").value;
+				window.open("https://www.google.com/search?q=" + sValue + "");
+			};
+		</script>
+		<script src="jquery/jquery-latest.js" type="text/javascript"></script>
 	</body>
 </html>
-
-
-
-
-
-
 
