--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
 								<li><a href="https://proton.me/" target="_blank"><img src="images/proton.png" alt="Img">Proton</a></li>
 								<li><a href="https://chat.openai.com/" target="_blank"><img src="images/gpt.png" alt="Img">ChatGPT</a></li>
 								<li><a href="https://gemini.google.com/app" target="_blank"><img src="images/gemini.png" alt="Img">Gemini</a></li>
-								<li><a href="https://claude.ai/" target="_blank"><img src="images/claude.png" alt="Img">Claude</a></li>
-								<li><a href="https://grok.com/" target="_blank"><img src="images/grok.png" alt="Img">Grok</a></li>
+								<li><a href="https://claude.ai/" target="_blank"><img src="images/claude.png" class="fullIcon" alt="Img">Claude</a></li>
+								<li><a href="https://grok.com/" target="_blank"><img src="images/grok.png" class="fullIcon" alt="Img">Grok</a></li>
 								<li><a href="https://aws.amazon.com/" target="_blank"><img src="images/aws.png" alt="Img">AWS</a></li>
 								<li><a href="https://console.cloud.google.com" target="_blank"><img src="images/googlecloud.png" alt="Img">GCP</a></li>
 								<li><a href="https://calendar.google.com/calendar" target="_blank"><img src="images/google-calendar.png" alt="Img">Calendar</a></li>
@@ -247,4 +247,5 @@
 		<script src="jquery/jquery-latest.js" type="text/javascript"></script>
 	</body>
 </html>
+
 
